<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/material_dynamic_neutral30"
        app:cardCornerRadius="20dp">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:padding="16dp"
            android:translationZ="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/knewave"
                android:text="@string/pause"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />



          <include  layout="@layout/music_settings_item"/>

            <include  layout="@layout/sfx_settings_item"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="@font/knewave"
                android:text="@string/do_you_exit"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/negativeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/knewave"
                    android:paddingHorizontal="0dp"
                    android:text="@string/cancel"
                    android:textColor="@color/blue"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/positiveButton"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:backgroundTint="@color/pink"
                    android:fontFamily="@font/knewave"
                    android:text="@string/exit"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>
